# Ticket-booking

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cleanup.yml
docs/: Doxyfile
include/cli/: CLIInterface.h
include/core/: BookingService.h
include/models/: Booking.h  Movie.h  Seat.h  Theater.h
src/cli/: CLIInterface.cpp  main.cpp
src/core/: BookingService.cpp
src/models/: Booking.cpp  Movie.cpp  Seat.cpp  Theater.cpp
tests/: CMakeLists.txt  main.cpp  test_booking_service.cpp  test_models.cpp  test_thread_safety.cpp
